# lean-agents-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  repomix-output.xml  test_cancel.sh
bench_logs/: Unsloth_9B_Q4_raw.jsonl  benchmark_report.md
scripts/: benchmark_gx10.sh  benchmark_rtx3090.sh  profile_uma.sh
specs/: implementation_plan.md
src/: lib.rs  main.rs
src/agents/: architect.rs  devils_advocate.rs  mod.rs  orchestrator.rs  programmer.rs
src/client/: llm.rs  search.rs
src/domain/: agent.rs  context.rs  decision.rs  event.rs  message.rs  mod.rs  state.rs  tool_call.rs
src/engine/: mod.rs
src/parser/: mod.rs
src/server/: router.rs  state.rs
tests/: test_runner.py
tools/cli_client/: client.py
